setting up db, sqlc
