# gen-go/models/json_object.go
@@ -1,0 +1,20 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+)
+
+// JSONObject JSON object
+//
+// swagger:model JSONObject
+type JSONObject map[string]interface{}
+
+// Validate validates this JSON object
+func (m JSONObject) Validate(formats strfmt.Registry) error {
+	return nil
+}
