# gen-go/models/outputs.go
@@ -10,10 +10,6 @@ func (o InternalError) Error() string {
 	return o.Message
 }
 
-func (o NotFound) Error() string {
-	return o.Message
-}
-
 func (u UnknownResponse) Error() string {
 	return fmt.Sprintf("unknown response with status: %d body: %s", u.StatusCode, u.Body)
 }
