# gen-go/models/repo_packages.go
@@ -1,0 +1,52 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// RepoPackages key is the name@version of module/package
+//
+// swagger:model RepoPackages
+type RepoPackages struct {
+
+	// list of depdenecies "<name>@<version>"
+	Dependencies []string `json:"dependencies"`
+
+	// module/package is links locally
+	IsLocal bool `json:"is_local,omitempty"`
+
+	// Name of go module or npm package
+	Name string `json:"name,omitempty"`
+
+	// Version of go module or npm package
+	Version string `json:"version,omitempty"`
+}
+
+// Validate validates this repo packages
+func (m *RepoPackages) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *RepoPackages) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *RepoPackages) UnmarshalBinary(b []byte) error {
+	var res RepoPackages
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
