# gen-go/server/handlers.go
@@ -126,23 +126,17 @@ func newHealthCheckInput(r *http.Request) (*models.HealthCheckInput, error) {
 	return &input, nil
 }
 
-// statusCodeForGetThings returns the status code corresponding to the returned
+// statusCodeForPostCustom returns the status code corresponding to the returned
 // object. It returns -1 if the type doesn't correspond to anything.
-func statusCodeForGetThings(obj interface{}) int {
+func statusCodeForPostCustom(obj interface{}) int {
 
 	switch obj.(type) {
-
-	case *[]models.Thing:
-		return 200
 
 	case *models.BadRequest:
 		return 400
 
 	case *models.InternalError:
 		return 500
-
-	case []models.Thing:
-		return 200
 
 	case models.BadRequest:
 		return 400
@@ -155,15 +149,26 @@ func statusCodeForGetThings(obj interface{}) int {
 	}
 }
 
-func (h handler) GetThingsHandler(ctx context.Context, w http.ResponseWriter, r *http.Request) {
+func (h handler) PostCustomHandler(ctx context.Context, w http.ResponseWriter, r *http.Request) {
 
-	resp, err := h.GetThings(ctx)
-
-	// Success types that return an array should never return nil so let's make this easier
-	// for consumers by converting nil arrays to empty arrays
-	if resp == nil {
-		resp = []models.Thing{}
+	input, err := newPostCustomInput(r)
+	if err != nil {
+		logger.FromContext(ctx).AddContext("error", err.Error())
+		http.Error(w, jsonMarshalNoError(models.BadRequest{Message: err.Error()}), http.StatusBadRequest)
+		return
 	}
+
+	if input != nil {
+		err = input.Validate(nil)
+	}
+
+	if err != nil {
+		logger.FromContext(ctx).AddContext("error", err.Error())
+		http.Error(w, jsonMarshalNoError(models.BadRequest{Message: err.Error()}), http.StatusBadRequest)
+		return
+	}
+
+	err = h.PostCustom(ctx, input)
 
 	if err != nil {
 		logger.FromContext(ctx).AddContext("error", err.Error())
@@ -172,94 +177,7 @@ func (h handler) GetThingsHandler(ctx context.Context, w http.ResponseWriter, r 
 		} else if xerr, ok := err.(xerrors.Formatter); ok {
 			logger.FromContext(ctx).AddContext("frames", fmt.Sprintf("%+v", xerr))
 		}
-		statusCode := statusCodeForGetThings(err)
-		if statusCode == -1 {
-			err = models.InternalError{Message: err.Error()}
-			statusCode = 500
-		}
-		http.Error(w, jsonMarshalNoError(err), statusCode)
-		return
-	}
-
-	respBytes, err := json.Marshal(resp)
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		http.Error(w, jsonMarshalNoError(models.InternalError{Message: err.Error()}), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(statusCodeForGetThings(resp))
-	w.Write(respBytes)
-
-}
-
-// newGetThingsInput takes in an http.Request an returns the input struct.
-func newGetThingsInput(r *http.Request) (*models.GetThingsInput, error) {
-	var input models.GetThingsInput
-
-	var err error
-	_ = err
-
-	return &input, nil
-}
-
-// statusCodeForDeleteThing returns the status code corresponding to the returned
-// object. It returns -1 if the type doesn't correspond to anything.
-func statusCodeForDeleteThing(obj interface{}) int {
-
-	switch obj.(type) {
-
-	case *models.BadRequest:
-		return 400
-
-	case *models.InternalError:
-		return 500
-
-	case *models.NotFound:
-		return 404
-
-	case models.BadRequest:
-		return 400
-
-	case models.InternalError:
-		return 500
-
-	case models.NotFound:
-		return 404
-
-	default:
-		return -1
-	}
-}
-
-func (h handler) DeleteThingHandler(ctx context.Context, w http.ResponseWriter, r *http.Request) {
-
-	id, err := newDeleteThingInput(r)
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		http.Error(w, jsonMarshalNoError(models.BadRequest{Message: err.Error()}), http.StatusBadRequest)
-		return
-	}
-
-	err = models.ValidateDeleteThingInput(id)
-
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		http.Error(w, jsonMarshalNoError(models.BadRequest{Message: err.Error()}), http.StatusBadRequest)
-		return
-	}
-
-	err = h.DeleteThing(ctx, id)
-
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		if btErr, ok := err.(*errors.Error); ok {
-			logger.FromContext(ctx).AddContext("stacktrace", string(btErr.Stack()))
-		} else if xerr, ok := err.(xerrors.Formatter); ok {
-			logger.FromContext(ctx).AddContext("frames", fmt.Sprintf("%+v", xerr))
-		}
-		statusCode := statusCodeForDeleteThing(err)
+		statusCode := statusCodeForPostCustom(err)
 		if statusCode == -1 {
 			err = models.InternalError{Message: err.Error()}
 			statusCode = 500
@@ -273,217 +191,103 @@ func (h handler) DeleteThingHandler(ctx context.Context, w http.ResponseWriter, 
 
 }
 
-// newDeleteThingInput takes in an http.Request an returns the id parameter
-// that it contains. It returns an error if the request doesn't contain the parameter.
-func newDeleteThingInput(r *http.Request) (string, error) {
-	id := mux.Vars(r)["id"]
-	if len(id) == 0 {
-		return "", errors.New("Parameter id must be specified")
-	}
-	return id, nil
-}
-
-// statusCodeForGetThing returns the status code corresponding to the returned
-// object. It returns -1 if the type doesn't correspond to anything.
-func statusCodeForGetThing(obj interface{}) int {
-
-	switch obj.(type) {
-
-	case *models.BadRequest:
-		return 400
-
-	case *models.InternalError:
-		return 500
-
-	case *models.NotFound:
-		return 404
-
-	case *models.Thing:
-		return 200
-
-	case models.BadRequest:
-		return 400
-
-	case models.InternalError:
-		return 500
-
-	case models.NotFound:
-		return 404
-
-	case models.Thing:
-		return 200
-
-	default:
-		return -1
-	}
-}
-
-func (h handler) GetThingHandler(ctx context.Context, w http.ResponseWriter, r *http.Request) {
-
-	id, err := newGetThingInput(r)
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		http.Error(w, jsonMarshalNoError(models.BadRequest{Message: err.Error()}), http.StatusBadRequest)
-		return
-	}
-
-	err = models.ValidateGetThingInput(id)
-
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		http.Error(w, jsonMarshalNoError(models.BadRequest{Message: err.Error()}), http.StatusBadRequest)
-		return
-	}
-
-	resp, err := h.GetThing(ctx, id)
-
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		if btErr, ok := err.(*errors.Error); ok {
-			logger.FromContext(ctx).AddContext("stacktrace", string(btErr.Stack()))
-		} else if xerr, ok := err.(xerrors.Formatter); ok {
-			logger.FromContext(ctx).AddContext("frames", fmt.Sprintf("%+v", xerr))
-		}
-		statusCode := statusCodeForGetThing(err)
-		if statusCode == -1 {
-			err = models.InternalError{Message: err.Error()}
-			statusCode = 500
-		}
-		http.Error(w, jsonMarshalNoError(err), statusCode)
-		return
-	}
-
-	respBytes, err := json.Marshal(resp)
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		http.Error(w, jsonMarshalNoError(models.InternalError{Message: err.Error()}), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(statusCodeForGetThing(resp))
-	w.Write(respBytes)
-
-}
-
-// newGetThingInput takes in an http.Request an returns the id parameter
-// that it contains. It returns an error if the request doesn't contain the parameter.
-func newGetThingInput(r *http.Request) (string, error) {
-	id := mux.Vars(r)["id"]
-	if len(id) == 0 {
-		return "", errors.New("Parameter id must be specified")
-	}
-	return id, nil
-}
-
-// statusCodeForCreateOrUpdateThing returns the status code corresponding to the returned
-// object. It returns -1 if the type doesn't correspond to anything.
-func statusCodeForCreateOrUpdateThing(obj interface{}) int {
-
-	switch obj.(type) {
-
-	case *models.BadRequest:
-		return 400
-
-	case *models.InternalError:
-		return 500
-
-	case *models.Thing:
-		return 200
-
-	case models.BadRequest:
-		return 400
-
-	case models.InternalError:
-		return 500
-
-	case models.Thing:
-		return 200
-
-	default:
-		return -1
-	}
-}
-
-func (h handler) CreateOrUpdateThingHandler(ctx context.Context, w http.ResponseWriter, r *http.Request) {
-
-	input, err := newCreateOrUpdateThingInput(r)
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		http.Error(w, jsonMarshalNoError(models.BadRequest{Message: err.Error()}), http.StatusBadRequest)
-		return
-	}
-
-	err = input.Validate()
-
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		http.Error(w, jsonMarshalNoError(models.BadRequest{Message: err.Error()}), http.StatusBadRequest)
-		return
-	}
-
-	resp, err := h.CreateOrUpdateThing(ctx, input)
-
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		if btErr, ok := err.(*errors.Error); ok {
-			logger.FromContext(ctx).AddContext("stacktrace", string(btErr.Stack()))
-		} else if xerr, ok := err.(xerrors.Formatter); ok {
-			logger.FromContext(ctx).AddContext("frames", fmt.Sprintf("%+v", xerr))
-		}
-		statusCode := statusCodeForCreateOrUpdateThing(err)
-		if statusCode == -1 {
-			err = models.InternalError{Message: err.Error()}
-			statusCode = 500
-		}
-		http.Error(w, jsonMarshalNoError(err), statusCode)
-		return
-	}
-
-	respBytes, err := json.Marshal(resp)
-	if err != nil {
-		logger.FromContext(ctx).AddContext("error", err.Error())
-		http.Error(w, jsonMarshalNoError(models.InternalError{Message: err.Error()}), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(statusCodeForCreateOrUpdateThing(resp))
-	w.Write(respBytes)
-
-}
-
-// newCreateOrUpdateThingInput takes in an http.Request an returns the input struct.
-func newCreateOrUpdateThingInput(r *http.Request) (*models.CreateOrUpdateThingInput, error) {
-	var input models.CreateOrUpdateThingInput
-
+// newPostCustomInput takes in an http.Request an returns the input struct.
+func newPostCustomInput(r *http.Request) (*models.CustomData, error) {
 	var err error
 	_ = err
 
 	data, err := ioutil.ReadAll(r.Body)
 
 	if len(data) > 0 {
-		input.Thing = &models.Thing{}
-		if err := json.NewDecoder(bytes.NewReader(data)).Decode(input.Thing); err != nil {
+		var input models.CustomData
+		if err := json.NewDecoder(bytes.NewReader(data)).Decode(&input); err != nil {
 			return nil, err
 		}
+		return &input, nil
 	}
 
-	idStr := mux.Vars(r)["id"]
-	if len(idStr) == 0 {
-		return nil, errors.New("path parameter 'id' must be specified")
-	}
-	idStrs := []string{idStr}
+	return nil, nil
+}
 
-	if len(idStrs) > 0 {
-		var idTmp string
-		idStr := idStrs[0]
-		idTmp, err = idStr, error(nil)
-		if err != nil {
+// statusCodeForPostUpload returns the status code corresponding to the returned
+// object. It returns -1 if the type doesn't correspond to anything.
+func statusCodeForPostUpload(obj interface{}) int {
+
+	switch obj.(type) {
+
+	case *models.BadRequest:
+		return 400
+
+	case *models.InternalError:
+		return 500
+
+	case models.BadRequest:
+		return 400
+
+	case models.InternalError:
+		return 500
+
+	default:
+		return -1
+	}
+}
+
+func (h handler) PostUploadHandler(ctx context.Context, w http.ResponseWriter, r *http.Request) {
+
+	input, err := newPostUploadInput(r)
+	if err != nil {
+		logger.FromContext(ctx).AddContext("error", err.Error())
+		http.Error(w, jsonMarshalNoError(models.BadRequest{Message: err.Error()}), http.StatusBadRequest)
+		return
+	}
+
+	if input != nil {
+		err = input.Validate(nil)
+	}
+
+	if err != nil {
+		logger.FromContext(ctx).AddContext("error", err.Error())
+		http.Error(w, jsonMarshalNoError(models.BadRequest{Message: err.Error()}), http.StatusBadRequest)
+		return
+	}
+
+	err = h.PostUpload(ctx, input)
+
+	if err != nil {
+		logger.FromContext(ctx).AddContext("error", err.Error())
+		if btErr, ok := err.(*errors.Error); ok {
+			logger.FromContext(ctx).AddContext("stacktrace", string(btErr.Stack()))
+		} else if xerr, ok := err.(xerrors.Formatter); ok {
+			logger.FromContext(ctx).AddContext("frames", fmt.Sprintf("%+v", xerr))
+		}
+		statusCode := statusCodeForPostUpload(err)
+		if statusCode == -1 {
+			err = models.InternalError{Message: err.Error()}
+			statusCode = 500
+		}
+		http.Error(w, jsonMarshalNoError(err), statusCode)
+		return
+	}
+
+	w.WriteHeader(200)
+	w.Write([]byte(""))
+
+}
+
+// newPostUploadInput takes in an http.Request an returns the input struct.
+func newPostUploadInput(r *http.Request) (*models.RepoPackageFiles, error) {
+	var err error
+	_ = err
+
+	data, err := ioutil.ReadAll(r.Body)
+
+	if len(data) > 0 {
+		var input models.RepoPackageFiles
+		if err := json.NewDecoder(bytes.NewReader(data)).Decode(&input); err != nil {
 			return nil, err
 		}
-		input.ID = idTmp
+		return &input, nil
 	}
 
-	return &input, nil
+	return nil, nil
 }
