# gen-go/server/interface.go
@@ -19,37 +19,19 @@ type Controller interface {
 	// default: client side HTTP errors, for example: context.DeadlineExceeded.
 	HealthCheck(ctx context.Context) error
 
-	// GetThings handles GET requests to /v2/things
-	//
-	// 200: []models.Thing
-	// 400: *models.BadRequest
-	// 500: *models.InternalError
-	// default: client side HTTP errors, for example: context.DeadlineExceeded.
-	GetThings(ctx context.Context) ([]models.Thing, error)
-
-	// DeleteThing handles DELETE requests to /v2/things/{id}
-	//
+	// PostCustom handles PUT requests to /v1/custom
+	// upload or replace custom data for a given repo and commit SHA
 	// 200: nil
 	// 400: *models.BadRequest
-	// 404: *models.NotFound
 	// 500: *models.InternalError
 	// default: client side HTTP errors, for example: context.DeadlineExceeded.
-	DeleteThing(ctx context.Context, id string) error
+	PostCustom(ctx context.Context, i *models.CustomData) error
 
-	// GetThing handles GET requests to /v2/things/{id}
-	//
-	// 200: *models.Thing
-	// 400: *models.BadRequest
-	// 404: *models.NotFound
-	// 500: *models.InternalError
-	// default: client side HTTP errors, for example: context.DeadlineExceeded.
-	GetThing(ctx context.Context, id string) (*models.Thing, error)
-
-	// CreateOrUpdateThing handles PUT requests to /v2/things/{id}
-	//
-	// 200: *models.Thing
+	// PostUpload handles POST requests to /v1/upload
+	// upload a package-type file, generated by breakdown-cli
+	// 200: nil
 	// 400: *models.BadRequest
 	// 500: *models.InternalError
 	// default: client side HTTP errors, for example: context.DeadlineExceeded.
-	CreateOrUpdateThing(ctx context.Context, i *models.CreateOrUpdateThingInput) (*models.Thing, error)
+	PostUpload(ctx context.Context, i *models.RepoPackageFiles) error
 }
