# swagger.yml
@@ -32,79 +32,112 @@ paths:
         200:
           description: OK response
 
-  /v2/things:
-    get:
-      summary: List things
-      operationId: getThings
-      parameters: []
-      responses:
-        200:
-          description: Array of things.
-          schema:
-            type: array
-            items:
-              $ref: "#/definitions/Thing"
-
-  /v2/things/{id}:
-    put:
-      summary: Creates or updates a thing.
-      operationId: createOrUpdateThing
+  /v1/upload:
+    post:
+      operationId: postUpload
+      description: upload a package-type file, generated by breakdown-cli
       parameters:
-        - name: thing
+        - name: package_files
           in: body
           schema:
-            $ref: "#/definitions/Thing"
-        - name: id
-          in: path
-          required: true
-          type: string
+            $ref: '#/definitions/RepoPackageFiles'
       responses:
         200:
-          description: The created or updated thing.
-          schema:
-            $ref: "#/definitions/Thing"
+          description: Successfully uploaded
         400:
           description: Bad request.
           schema:
             $ref: "#/definitions/BadRequest"
-    get:
-      summary: Get a thing by id.
-      operationId: getThing
+
+  /v1/custom:
+    put:
+      operationId: postCustom
+      description: "upload or replace custom data for a given repo and commit SHA"
       parameters:
-      - name: id
-        in: path
-        type: string
-        required: true
-      responses:
-        200:
-          description: The thing object.
+        - name: custom_data
+          in: body
           schema:
-            $ref: "#/definitions/Thing"
-        404:
-          $ref: "#/responses/NotFound"
-    delete:
-      summary: Delete a thing.
-      operationId: deleteThing
-      parameters:
-      - name: id
-        in: path
-        type: string
-        required: true
+            $ref: '#/definitions/CustomData'
       responses:
         200:
-          description: OK
-        404:
-          $ref: "#/responses/NotFound"
+          description: Successfully uploaded
+        400:
+          description: Bad request.
+          schema:
+            $ref: "#/definitions/BadRequest"
 
 definitions:
-  Thing:
-    description: provided as an example
+
+  JSONObject: # generates map[string]interface{}
     type: object
+    additionalProperties:
+      type: object
+      additionalProperties: true
+
+  CustomData:
+    description: custom data object
+    type: object
+    required:
+      - repo_name
+      - commit_sha
+      - data
     properties:
-      id:
+      repo_name:
+        description: Full repo name "github.com/Clever/<name>"
         type: string
-      foo:
+      commit_sha:
+        description: Full sha of commit
         type: string
+      data:
+        $ref: '#/definitions/JSONObject'
+
+  RepoPackageFiles:
+    description: array of package-files generated by breakdown-cli
+    type: array
+    items:
+      $ref: '#/definitions/RepoPackageFile'
+
+  RepoPackages:
+    type: object
+    description: key is the name@version of module/package
+    properties:
+      name:
+        description: Name of go module or npm package
+        type: string
+      version:
+        description: Version of go module or npm package
+        type: string
+      is_local:
+        description: module/package is links locally
+        type: boolean
+      dependencies:
+        description: list of depdenecies "<name>@<version>"
+        type: array
+        items:
+          type: string
+
+  RepoPackageFile:
+    description: format of packages
+    type: object
+    required:
+      - path
+      - name
+      - packages
+    properties:
+      path:
+        description: path to package file eg "go.mod"
+        type: string
+      name:
+        description: Name of go module or npm package
+        type: string
+      go_version:
+        description: version of go, if any
+        type: string
+      packages:
+        $ref: '#/definitions/RepoPackages'
+      error:
+        type: string
+        description: error when parsing package-file, if any
 
   ErrorCode:
     type: string
